examples/test/testpolicy14368.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14368
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key32: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value26
          key48: value15
          key35: value26
      podSelector:
        matchLabels:
          key4: value8
